# pollsapi

./: README.md  pyproject.toml
apps/polls/: admin.py  apiviews.py  models.py  serializers.py  urls.py  views.py
apps/polls/migrations/: 0001_initial.py
pollsapi/: settings.py  urls.py
